Refactor to remove unused imports, simplify code, and replace deprecated elements.